--- a/vercel.json
+++ b/vercel.json
@@ -1,29 +1,7 @@
 {
   "version": 2,
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "api/index.py"
-    },
-    {
-      "src": "/health",
-      "dest": "api/index.py"
-    },
-    {
-      "src": "/docs",
-      "dest": "api/index.py"
-    },
-    {
-      "src": "/openapi.json",
-      "dest": "api/index.py"
-    },
-    {
-      "src": "/",
-      "dest": "api/index.py"
-    }
-  ],
   "functions": {
-    "api/index.py": {
+    "index.py": {
       "maxDuration": 30,
       "memory": 1024
     }
