Update vercelignore, requirements.txt and add VERCEL_SIZE_FIX.md

--- a/.vercelignore
+++ b/.vercelignore
@@ -13,12 +13,28 @@ build/
 .env.local
 *.log
 .DS_Store
-data/cache/
-data/raw/
-data/processed/
+data/
 tests/
 *.db
 *.sqlite
 logs/
 frontend/src/
 node_modules/
+*.md
+docs/
+.git/
+*.cache
+.cache/
+.pytest_cache/
+.coverage
+htmlcov/
+*.pkl
+*.pickle
+models/
+*.bin
+*.pt
+*.pth
+*.safetensors
+*.onnx
+*.h5
+*.hdf5
