--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,11 @@ beautifulsoup4==4.12.2
 lxml==4.9.3
 
 # Data Processing
-pandas==2.1.3
-numpy==1.26.2
+# pandas==2.1.3  # Vercel 배포 시 크기 제한으로 주석 처리 (필요시 활성화)
+# numpy==1.26.2  # Vercel 배포 시 크기 제한으로 주석 처리 (필요시 활성화)
 
 # NLP & Korean Language Processing
-sentence-transformers==2.2.2
+# sentence-transformers==2.2.2  # Vercel 배포 시 크기 제한으로 제거 (모델 파일이 매우 큼)
 
 # AI API
 openai==1.3.0
