Update backend services, frontend styles, requirements and add design template

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,8 @@ lxml==4.9.3
 
 # AI API
 openai==1.3.0
-google-generativeai==0.3.0
+google-generativeai==0.3.0  # 기존 방식 지원
+google-genai>=0.2.0  # 새로운 Gemini API 클라이언트 (선택사항)
 
 # Utilities
 python-dotenv==1.0.0
