Fix Vercel 500 error: improve error handling, add explicit handler export, and enhance startup event

--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,12 @@
       "dest": "api/index.py"
     }
   ],
+  "functions": {
+    "api/index.py": {
+      "maxDuration": 60,
+      "memory": 1024
+    }
+  },
   "env": {
     "PYTHONPATH": "."
   }
