--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ lxml==4.9.3
 # sentence-transformers==2.2.2  # Vercel 배포 시 크기 제한으로 제거 (모델 파일이 매우 큼)
 
 # AI API
-openai==1.3.0
+openai>=1.12.0  # 최신 버전 사용 (proxies 오류 수정)
 google-generativeai==0.3.0  # 기존 방식 지원
 google-genai>=0.2.0  # 새로운 Gemini API 클라이언트 (선택사항)
 
