Fix tests, optimize backend with parallel execution, add frontend request deduplication

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,12 @@ WORDCLOUD_MAX_WORDS=100
 DATA_DIR=./data
 CACHE_ENABLED=True
 CACHE_TTL=3600
+CACHE_MAX_ENTRIES=500
+CACHE_CLEANUP_INTERVAL=100
+
+# 응답 압축 설정
+GZIP_ENABLED=True
+GZIP_MINIMUM_SIZE=1000
 
 # 로깅 설정
 LOG_LEVEL=INFO
